<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivRegisterIcon"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/btn_register"
            app:srcCompat="@drawable/ic_login_icon"
            app:tint="@color/dark_purple" />

        <EditText
            android:id="@+id/etIdR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_id"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etNameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etLastnameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_lastname"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etEmailR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_email"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPasswordConR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_passwordConf"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnRegisterR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="5dp"
            android:onClick="onClick"
            android:text="@string/btn_register" />

        <Button
            android:id="@+id/btnLoginR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="60dp"
            android:onClick="onClick"
            android:text="@string/btn_login" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>