<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyProductActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14">

        <ImageView
            android:id="@+id/ivBuyProduct"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            app:srcCompat="@drawable/ic_cloud_upload" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblBuyProductName"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/pd_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBuyProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblBuyProductDescription"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/pd_description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBuyProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblBuyProductPrice"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/pd_price"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBuyProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-160dp"
            tools:layout_editor_absoluteY="481dp">

            <TextView
                android:id="@+id/lblBuyProductCategory"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/pd_category"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBuyProductCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblBuyProductStock"
                android:layout_width="205dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/pd_stock"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBuyProductStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblBuyProductBuyStock"
                android:layout_width="205dp"
                android:layout_height="48dp"
                android:gravity="center|start"
                android:text="@string/pd_buy_stock"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etBuyProductBuyStock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="0"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="addCar"
                android:text="@string/btn_add_car" />

            <Button
                android:id="@+id/btnCreateCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="buyProduct"
                android:text="@string/btn_buy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBuyProductShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Nombre de la tienda" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="722dp"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>