<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopMainActivity">

    <LinearLayout
        android:id="@+id/lnlVendorMain"
        android:layout_width="411dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_CreateProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:onClick="addProducts"
            android:text="@string/btn_create"
            tools:visibility="gone" />

        <Button
            android:id="@+id/btncheckVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="Ventas"
            tools:visibility="gone" />

        <Button
            android:id="@+id/btnCar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/btn_add_car"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="checkUsers"
            android:text="@string/btn_check"
            android:visibility="visible" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlVendorMain" />
</androidx.constraintlayout.widget.ConstraintLayout>